# 2D-laplace-omp

./: CMakeLists.txt  README.md  compile.sh  laplace-omp.cpp  laplace-omp.h  main-omp.cpp
jobs/: compile.sh  job.sh
src/: CMakeLists.txt  main-omp.cpp
